@@ -1,5 +1,5 @@
 plugins {
-    alias(libs.plugins.shadow)
+    alias(libs.plugins.graalvm)
     id 'application'
     id 'java'
 }
@@ -47,8 +47,23 @@ application {
     applicationDefaultJvmArgs = ['--enable-preview']
 }
 
-shadowJar {
-    archiveBaseName.set('Stickerify')
-    archiveClassifier.set('shadow')
-    archiveVersion.set('')
+graalvmNative {
+    agent {
+        defaultMode = 'standard'
+        enabled = true
+        metadataCopy {
+            inputTaskNames.add('test')
+            outputDirectories.add('src/main/resources/META-INF/native-image')
+            mergeWithExisting = true
+        }
+    }
+    binaries {
+        main {
+            buildArgs.addAll('--static', '--libc=musl')
+            jvmArgs.add('--enable-preview')
+        }
+    }
+    metadataRepository {
+        enabled = true
+    }
 }
